Add server code generated from swagger.yaml
