# swagger_server/swagger/swagger.yaml
@@ -1,3 +1,4 @@
+---
 swagger: "2.0"
 info:
   description: "This is a MVP web store for XenElectronics"
@@ -21,45 +22,48 @@ paths:
         description: "category of products for filter; repeated"
         required: false
         type: "string"
-        enum: ["home_appliances", "smart_watches", "mobile_phones"]
+        enum:
+        - "home_appliances"
+        - "smart_watches"
+        - "mobile_phones"
       responses:
         "200":
           description: "A complex object array of products"
           schema:
-            type: array
+            type: "array"
             items:
-              type: object
+              type: "object"
               properties:
                 id:
-                  type: integer
+                  type: "integer"
                 name:
-                  type: string
+                  type: "string"
                 price:
-                  type: number
+                  type: "number"
                 description:
-                  type: string
+                  type: "string"
                 categories:
-                  type: array
+                  type: "array"
                   items:
-                    type: string
+                    type: "string"
         "400":
           description: "Bad inputs for filters e.g. invalid category"
+      x-swagger-router-controller: "swagger_server.controllers.default_controller"
   /checkout:
     put:
       summary: "Saves cart items to database and create a checkout"
-      description: "Saves what items this user is purchasing alongside the quantity of each item"
-      operationId: "saveCart"
+      description: "Saves what items this user is purchasing alongside the quantity\
+        \ of each item"
+      operationId: "save_cart"
       parameters:
-      - name: "products"
-        in: "body"
+      - in: "body"
+        name: "products"
         description: "The checkout to create"
         required: true
         schema:
           type: "array"
           items:
             type: "object"
-            required:
-            - "product"
             properties:
               productId:
                 type: "integer"
@@ -73,6 +77,7 @@ paths:
             properties:
               checkoutId:
                 type: "integer"
+      x-swagger-router-controller: "swagger_server.controllers.default_controller"
   /checkout/{checkoutId}:
     post:
       summary: "Informs server that payment has been made"
@@ -87,5 +92,4 @@ paths:
       responses:
         "200":
           description: "OK"
-
-        
+      x-swagger-router-controller: "swagger_server.controllers.default_controller"
